Możliwość zmiany klas tabeli #3

--- a/src/View/table.phtml
+++ b/src/View/table.phtml
@@ -13,7 +13,7 @@
             </div>
         <?php endif; ?>
     </div>
-    <table border="1" style="width: 100%; border-collapse: collapse;">
+    <table border="1" style="width: 100%; border-collapse: collapse;" class="<?= $this->getClass() ?>">
         <thead>
         <tr style="background: #333; color: white; font-weight: bold;">
             <?php foreach($this->columns as $column): ?>
