--- a/src/View/table_bootstrap5.phtml
+++ b/src/View/table_bootstrap5.phtml
@@ -24,7 +24,7 @@
             </div>
         <?php endif; ?>
     </div>
-    <table class="table table-striped m-0">
+    <table class="table table-striped m-0 <?= $this->getClass() ?>">
         <thead>
         <tr>
             <?php foreach($this->columns as $column): ?>
