move template to phtml files

--- a/src/Resources/view/professional.phtml
+++ b/src/Resources/view/professional.phtml
@@ -67,7 +67,7 @@ use NimblePHP\Table\Table;
                 </tbody>
             </table>
         </div>
-        <div class="table-footer p-1 mt-2" style="padding: 16px !important; background-color: #fcfcfc; border-top: 1px solid #f0f0f0;">
+        <div class="table-footer p-1" style="padding: 16px !important; background-color: #fcfcfc; border-top: 1px solid #f0f0f0;">
             <div class="d-flex justify-content-between">
                 <div>
                     <?php if ($isAjax): ?>
