--- a/src/Resources/view/professional.phtml
+++ b/src/Resources/view/professional.phtml
@@ -1,4 +1,6 @@
 <?php
+
+use NimblePHP\Framework\Translation\Translation;
 use NimblePHP\Table\Column;
 use NimblePHP\Table\Filter;
 use NimblePHP\Table\Table;
@@ -38,7 +40,7 @@ use NimblePHP\Table\Table;
                 <div class="col-12 col-md-auto d-flex justify-content-end">
                     <input class="ajax-form form-control me-2 form-control-sm w-100"
                            type="search" name="search" value="<?= $searchValue ?>"
-                           placeholder="<?= $lang['search'] ?>" aria-label="search"
+                           placeholder="<?= Translation::getInstance()->translate('module.table.search') ?>" aria-label="search"
                            style="border-radius: 4px; border: 1px solid #e2e8f0; padding: 8px 12px; font-size: 14px;"/>
                 </div>
             <?php endif ?>
